# CollegeForecastPro

./: .dockerignore  .env.example  .env.production  .replit  ALGORITHM_ENHANCEMENTS_SUMMARY.md  ALGORITHM_IMPROVEMENT_RESEARCH.md  AWS_LIGHTSAIL_DEPLOYMENT.md  BACKTESTING_EXPANSION_SUMMARY.md  BETTING_LOGIC_FIX_SUMMARY.md  BRANCH_MERGE_STRATEGY.md  BRANCH_SUMMARY.md  DEPLOYMENT_FILES_CHANGED.md  Dockerfile  Dockerfile-working  Dockerfile.unified  GIT_COMMIT_INSTRUCTIONS.md  GOOGLE_ADS_SETUP.md  PREDICTION_CONSISTENCY_FIX.md  PRODUCTION_BLOG_SEED.sql  QUICK_DEPLOY_GUIDE.md  RICKS_PICKS_FOOTBALL_DEPLOYMENT.md  SP_PLUS_SUCCESS_SUMMARY.md  add-author-column-via-api.js  add-author-column.js  add-betting-lines-weeks-12-16.ts  add-weather-weeks-12-16.ts  advanced-analytics-demo.ts  advanced-analytics-implementation.ts  algorithm-performance-summary.ts  algorithm-regression-test.ts  authentic-2025-sync.ts  backtest-enhanced-algorithm.ts  betting-filter-test.ts  betting-lines-scheduler.ts  betting-logic-test.ts  check-cfbd-api-structure.ts  check-historical-roster-data.ts  collect-2020-season.ts  collect-missing-2024-weeks.ts  collect-recent-2024-weeks.ts  (+109 more)
attached_assets/: Pasted--11-deps-3-3-RUN-npm-ci-npm-cache-clean-force-11-2-608-npm-error-code-EUSAGE-11-2-609-npm-e-1754318273347_1754318273348.txt  Pasted--12-2-740-npm-error-A-complete-log-of-this-run-can-be-found-in-root-npm-logs-2025-08-03-T23-00-0-1754262100911_1754262100912.txt  Pasted--13-9-086-error-during-build-13-9-086-client-src-pages-historical-tsx-2-9-HistoricalGameCard--1754531228695_1754531228695.txt  (+11 more)
(+160 files in other folders)
